Add style for dashboard, template and style for basic tweets

--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -11,3 +11,13 @@ $font-size--sm: 12px;
 $font-size--md: 16px;
 $font-size--lg: 24px;
 $font-size--xl: 32px;
+
+// font-family
+$font-family: Helvetica, 'Helvetica Neue', Arial, sans-serif;
+
+// search front-end colors:
+$search-grey: #66757f;
+$search-grey-border: #E1E8ED;
+$search-grey-bg: #F5F8FA;
+$search-light-black: #292f33;
+$search-twitter-blue: #55ACEE;
