--- a/app/views/search.html
+++ b/app/views/search.html
@@ -37,7 +37,7 @@
         <div class="wide-hr"></div>           
 
         <div class="dashboard dashboard-left col-md-3">
-            <div class="login">
+            <div class="sign-up">
                 <h2>New to Loklak?</h2>
                 <p>Sign up now to get your own personalized timeline!
                 </p>
