--- a/app/views/status.html
+++ b/app/views/status.html
@@ -1,19 +1,14 @@
-<div ng-attr-id="{{data.id_str}}" ng-class="highlight ? 'status highlight' : 'status'">
-	<div class="inner">
-		<div class="header">
-			<img ng-src="{{data.user.profile_image_url}}" class="user-avatar"/>
-			<strong class="user-fullname">{{data.user.name}}</strong>
-			<span class="user-username">@{{data.user.screen_name}}</span>
-			<small class="time" am-time-ago="data.created_at"></small>
-		</div>
-		<div class="content">
-			<div class="text">{{data.text}}</div>
-			<div masonry="{ transitionDuration: '1s'}" item-selector=".masonry-brick" data-ng-click="open(data.id_str);">	
-			    <div class="masonry-brick" ng-repeat="image in data.images">
-			        <img class="masonry-image" ng-src="{{image}}" alt="A masonry brick">
-			    </div>
-			</div>
-		</div>
-		<div class="clearfix"></div>
-	</div>
+<div ng-attr-id="{{data.id_str}}" class="tweet tweet-simple">
+    <img class="avatar" 
+    onError="this.onerror=null;this.src='/images/anon_200x200.png';"
+    ng-src="{{data.user.profile_image_url_https}}" alt="user-images">
+    <div class="tweet-content">
+        <a class="name" ng-href="{{'https://twitter.com/' + data.user.screen_name}}">{{data.user.name}}</a>
+        <span class="screen-name">{{ "@" + data.user.screen_name}}</span>
+        <span class="created-at">- {{data.created_at | twitterFromNow }}</span>
+        <p class="tweet-content-text">
+            <!-- Photo: BLAST! <span class="tweet-hashtag">#tylerthecreator</span>#cherrybomb <span class="tweet-hashtag tweet-hashtag-current">#berlin</span> #oddfuture @berlin <span class="tweet-mention">@16again</span> http://tmblr.co/ZVesrk1lOGGGo  -->
+            {{data.text}}
+        </p>
+    </div>
 </div>
