Add word break to status text content

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -611,6 +611,7 @@
 						color: #8899A6;
 					}
 					.tweet-content-text {
+						word-break: break-all;
 						color: #292f33;
 						font-size: 14px;
 						line-height: 18px;
