--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,11 +8,18 @@
 	font-family: $font-family;
 }
 
+
+/* Admin LTE */
+
+ /* Topnav */
+ .universal-search {
+ 	display: inline-block;
+ }
+
 /* Old styles */
 	body {
 	  font-family: Helvetica, sans-serif;
 	  background-color: $background-light;
-	  margin-top: 70px;
 	}
 
 
