--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,38 +1,16 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<div ng-include src="'topnav.html'"></div>
+<div ng-include src="'sidebar.html'"></div>
+
+<div class="content-wrapper">
     <div class="container">
-        <div class="navbar-header">
-            <img src="../images/loklak_icon_yellow_45x45.png" class="pull-left" alt="" width="30%" height="30%" style="margin-top:5px;">
-            <a class="navbar-brand pull-right" href="/">
-                <code>loklak</code>
-            </a>
-        </div>
-        <nav class="collapse navbar-collapse bs-navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/about">About</a>
-                </li>
-                <li>
-                    <a href="/statistics">Statistics</a>
-                </li>
-                <li>
-                    <a href="/wall">Wall</a>
-                </li>
-                <li>
-                    <a href="/search">Search</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</nav>
-<div class="container">
-    <div class="jumbotron">
-        <div class="row">
-            <h1><code>loklak</code></h1>
-            <h2>Mass Message (aka Tweets) Evaluation</h2>
-            <p>This is the front-end for the <a href="http://loklak.org">Distributed Message Search Server <code>loklak</code></a>. We collect Tweets and provide mass-data evaluation functions using search engine technology.</p>
+    	<div class="jumbotron">
+            <div class="row">
+                <h1><code>loklak</code></h1>
+                <h2>Mass Message (aka Tweets) Evaluation</h2>
+                <p>This is the front-end for the <a href="http://loklak.org">Distributed Message Search Server <code>loklak</code></a>. We collect Tweets and provide mass-data evaluation functions using search engine technology.</p>
+            </div>
         </div>
     </div>
 </div>
+
+<div ng-include src="'controlsidebar.html'"></div>
