--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -1,109 +1,4 @@
-<div class="container" ng-keyup="wall.resumeInterval($event)" tabindex="1">
- 	<div class="row">
- 		<div class="col-md-12 main wall">
- 			<div class="container">
- 				<div class="row">
- 					<div id="sidebar-wrapper" style="magin-top:-70px;">
- 						<ul class="sidebar-nav">
- 							<li class="sidebar-brand">
- 								<a href="#">
- 									<div class="row col-md-offset-0" style="text-align:left;">
-	 									<img src="../images/loklak_icon_yellow.png" alt="" width="90%" style="padding:10px;">
-	 									<h1 ng-if="wall.displaySearch"><code>loklak</code> wall</h1>
-	 									<h1 ng-if="!wall.displaySearch"><code>loklak</code>.net</h1>
-	 									<h2 ng-if="!wall.displaySearch">wall for <em>{{wall.term}}</em></h2>
- 									</div>
- 								</a>
- 							</li>
- 						</ul>
- 					</div>
- 					<div id="page-content-wrapper" style="margin-left:10%; margin-top:-70px;">
- 						<div class="container">
-		 					<div ng-if="wall.displaySearch" class="wall-search">
-		 						<h1>Search</h1>
-		 						<form class="form-inline form-search">
-		 							<div class="form-group">
-		 								<input type="text" class="form-control" ng-model="term" placeholder="Search term">
-		 							</div>
-		 							<button type="submit" class="btn btn-success" ng-click="wall.update(term)">Show Tweets</button>
-		 						</form>
-		 					</div>
-		 					<div ng-if="!wall.displaySearch" class="wall-display">
-		 						<div class="status-list">
-		 							<div ng-repeat="status in wall.statuses | orderBy: '-created_at'" class="animate-repeat" status open="wall.open" data="status" highlight="$first" wall="wall"></div>
-		 						</div>
-		 					</div>
-	 					</div>
- 					</div>
- 				</div>
- 			</div>
- 		</div>
- 	</div>
- </div>
+<div ng-include src="'topnav.html'"></div>
+<div ng-include src="'sidebar.html'"></div>
 
-<!-- Root element of PhotoSwipe. Must have class pswp. -->
-<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
-
-    <!-- Background of PhotoSwipe. 
-         It's a separate element as animating opacity is faster than rgba(). -->
-    <div class="pswp__bg"></div>
-
-    <!-- Slides wrapper with overflow:hidden. -->
-    <div class="pswp__scroll-wrap">
-
-        <!-- Container that holds slides. 
-            PhotoSwipe keeps only 3 of them in the DOM to save memory.
-            Don't modify these 3 pswp__item elements, data is added later on. -->
-        <div class="pswp__container">
-            <div class="pswp__item"></div>
-            <div class="pswp__item"></div>
-            <div class="pswp__item"></div>
-        </div>
-
-        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
-        <div class="pswp__ui pswp__ui--hidden">
-
-            <div class="pswp__top-bar">
-
-                <!--  Controls are self-explanatory. Order can be changed. -->
-
-                <div class="pswp__counter"></div>
-
-                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-
-                <button class="pswp__button pswp__button--share" title="Share"></button>
-
-                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-
-                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-
-                <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
-                <!-- element will get class pswp__preloader--active when preloader is running -->
-                <div class="pswp__preloader">
-                    <div class="pswp__preloader__icn">
-                      <div class="pswp__preloader__cut">
-                        <div class="pswp__preloader__donut"></div>
-                      </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-                <div class="pswp__share-tooltip"></div> 
-            </div>
-
-            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-            </button>
-
-            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-            </button>
-
-            <div class="pswp__caption">
-                <div class="pswp__caption__center"></div>
-            </div>
-
-        </div>
-
-    </div>
-
-</div>
+<div ng-include src="'controlsidebar.html'"></div>
