--- a/app/views/status.html
+++ b/app/views/status.html
@@ -1,9 +1,9 @@
-<div ng-attr-id="{{data.id_str}}" class="tweet tweet-simple">
+<div ng-attr-id="{{data.id_str}}" ng-init="showdetail = false" class="tweet tweet-simple">
     <img class="avatar" 
     	 onError="this.onerror=null;this.src='/images/anon_200x200.png';"
     	 ng-src="{{data.user.profile_image_url_https}}" alt="user-images">
 
-    <div class="tweet-content">
+    <div class="tweet-content" ng-click="showdetail = !showdetail">
 
     	<!-- Metadata -->
         <a class="name" ng-href="{{'https://twitter.com/' + data.user.screen_name}}">{{data.user.name}}</a>
@@ -14,32 +14,29 @@
         <p class="tweet-content-text" ng-bind-html="data.text | tweetMention | tweetHashtag | toTrusted"></p>
 
         <!-- Images -->
-        <div ng-if="data.images_count" masonry="{ transitionDuration: '.25s'}" 
-             item-selector=".masonry-brick" 
-             data-ng-click="open(data.id_str);">	
-		    <div class="masonry-brick" ng-repeat="image in data.images">
-		        <img class="masonry-image" ng-src="{{image}}" alt="A masonry brick">
-		    </div>
-		</div>
+        <div ng-class="{'images-wrapper': true, 'showdetail': showdetail}" ng-if="data.images_count">
+                <div ng-repeat="image in data.images">
+                    <img ng-src="{{image}}" alt="A masonry brick">
+                </div>
+        </div>
 
-<!--         <div ng-if="data.images_count == 1" 
-        	 class="tweet-images-container"
-        	 masonry="{ transitionDuration: '.25s'}" 
-             item-selector=".masonry-brick" 
-             data-ng-click="open(data.id_str);">
-        	<img class="tweet-single-image"  ng-src="{{data.images[0]}}">
-        </div> -->
+        <!-- Hidden detailed metadata -->
 
-        <!-- Action list -->
+        <div ng-show="showdetail" class="detail-metadata">
+            <span class="metadata">{{ data.created_at | date:'h:mm a - dd MMM yyyy .' }}</span> · 
+            <a class="link-to-tweet" ng-href="{{data.link}}" tabindex="-1">Details</a>
+        </div>
+
+
         <div class="action-list">
         	<div class="action-reply">
-        		<button class="reply">
+        		<button class="reply" />
         	</div>
         	<div class="action-retweet">
-        		<button class="retweet">	
+        		<button class="retweet" />	
         	</div>
         	<div class="action-favor">
-        		<button class="favor">	
+        		<button class="favor" />	
         	</div>
         	<div class="action-more">
         		<i class="fa fa-circle"></i>
