Add pswp, fix history error when closing pswp dialog

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -11,7 +11,7 @@
             <div class="main col-md-6">
                 <!-- New tweets notification -->
                 <div class="new-tweet-noti">
-                    <a href="#">8 new results</a>
+                    <a href="#">Query on background to notify new results</a>
                 </div>
                  <div ng-repeat="status in search.statuses" status open="search.open" data="status"></div>
             </div>
