--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -363,7 +363,7 @@
 	padding: 0;
 	
 	.content-container {
-		height: 2000px;
+		width: 95%;
 		border: 1px solid $search-grey-border;
 		margin-top: 20px;
 		border-radius: 6px;
