--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -19,15 +19,18 @@
           <ul class="sidebar-menu">
             <li class="header">Views</li>
             <!-- Optionally, you can add icons to the links -->
-            <li class="active"><a href="home"><i class='fa fa-link'></i> <span>Home</span></a></li>
-            <li><a href="#"><i class='fa fa-link'></i> <span>Another Link</span></a></li>
-            <li class="treeview">
+            <li ng-repeat="navItem in root.topNavItems">
+              <a ng-href="{{navItem.link}}">
+                <i class='fa fa-link'></i> <span>{{navItem.title}}</span>
+              </a>
+            </li>
+            <!-- <li class="treeview">
               <a href="#"><i class='fa fa-link'></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
               <ul class="treeview-menu">
                 <li><a href="#">Link in level 2</a></li>
                 <li><a href="#">Link in level 2</a></li>
               </ul>
-            </li>
+            </li> -->
           </ul><!-- /.sidebar-menu -->
         </section>
         <!-- /.sidebar -->
