--- a/app/views/search.html
+++ b/app/views/search.html
@@ -3,16 +3,25 @@
 
 <div class="content-wrapper">
     <div class="search-container container-fluid">
+        <div class="input-container container">
+            <form ng-submit="search.update(term)" class="navbar-form navbar-left" role="search">
+           <div class="form-group">
+             <input ng-model="term" type="text" class="form-control" id="navbar-search-input" placeholder="Search">
+           </div>
+         </form>
+            <div class="clearfix"></div>
+         </div>
 
+        
         <!-- Main content -->
         <div class="container content-container">
             <!-- Separator -->
             <div class="wide-hr"></div>           
-            <div class="main col-md-6">
+            <div ng-show="search.showResult" class="result-container col-md-6">
                 <!-- New tweets notification -->
-                <div class="new-tweet-noti">
+<!--                 <div class="new-tweet-noti">
                     <a href="#">Query on background to notify new results</a>
-                </div>
+                </div> -->
                  <div ng-repeat="status in search.statuses" status open="search.open" data="status"></div>
             </div>
 
