--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,13 +2,11 @@
 <div ng-include src="'sidebar.html'"></div>
 
 <div class="content-wrapper">
-    <div class="container">
-    	<div class="jumbotron">
-            <div class="row">
-                <h1><code>loklak</code></h1>
-                <h2>Mass Message (aka Tweets) Evaluation</h2>
-                <p>This is the front-end for the <a href="http://loklak.org">Distributed Message Search Server <code>loklak</code></a>. We collect Tweets and provide mass-data evaluation functions using search engine technology.</p>
-            </div>
+    <div class="row cms-view">
+        <div class="col-md-12">
+            <h1 class="page-header"><code>loklak</code></h1>
+            <h2>Mass Message (aka Tweets) Evaluation</h2>
+            <p>This is the front-end for the <a href="http://loklak.org">Distributed Message Search Server <code>loklak</code></a>. We collect Tweets and provide mass-data evaluation functions using search engine technology.</p>
         </div>
     </div>
 </div>
