Partial features to #71
Moved topbar and sidebar to index.html
Created an empty controller for the wall
Created a new route for Wall
Created a landing page for the wall
Created a basic getting started view (See issue)
Used ngTagsInput for tags
Used bootstrap-colorpicker-module for the color picker

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -568,11 +568,17 @@
 
 }
 
-
-
-
-
-
-
-
-
+/* Styling for Wall frontend */
+.layoutRadio > input{ /* HIDE RADIO */
+  display:none;
+}
+.layoutRadio > input + img{ /* IMAGE STYLES */
+  cursor:pointer;
+  border:2px solid transparent;
+}
+.layoutRadio > input:checked + img{ /* (CHECKED) IMAGE STYLES */
+  border:2px solid #f00;
+}
+.design-box {
+	margin-top: 20px;
+}
