--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -582,3 +582,75 @@
 .design-box {
 	margin-top: 20px;
 }
+
+.linear {
+	display: block;
+	min-height: 164px;
+	background: white;
+	padding: 20px 12px;
+	margin-bottom: 25px;
+	border-bottom: 1px solid $search-grey-border;
+	&:first-child {
+		border-top-left-radius: 6px;
+		border-right-left-radius: 6px;
+	}
+	&:hover {
+		background: $search-grey-bg;
+		cursor: pointer;
+	}
+	.avatar {
+		height: 130px;
+		float: left;
+		border-radius: 6px;
+	}
+	.linear-content {
+		position: relative;
+		margin-left: 150px;
+		min-height:130px;
+		.name {
+			&:hover {
+				color: $search-twitter-blue;
+			}
+		}
+		.linear-content-text {
+			word-break: break-all;
+			color: #292f33;
+			font-size: 28px;
+			.linear-hashtag {
+				color: #55ACEE;
+			}
+			.linear-hashtag-current {
+				font-weight: bold;
+			}
+		}
+		.metadata{
+/*			position: absolute;
+			bottom: 0;*/
+			font-size: 18px;	
+			color: #8899A6;
+			font-weight: normal;
+			font-style: italic;
+		}
+	}
+
+}
+
+.wall-header{
+	min-height: 150px;
+	background-color: #3c8dbc;
+	display: flex;
+  	flex-direction: row;
+	.hashtag, .event-name, .banner{
+		text-align: center;
+		color: white;
+		font-size: 28px;
+	}
+
+}
+.wall-header > [class^="col-"],
+.wall-header > [class*=" col-"] {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Optional, to align inner items 
+                              horizontally inside the column */
+}
